# FastNext

./: .env.example  .gitignore  AUTHENTICATION_VERIFICATION.md  BACKEND_STRUCTURE_IMPROVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  FRONTEND_API_MIGRATION_SUMMARY.md  GRAPHQL_INTEGRATION_STATUS.md  IMPORT_FIXES_NEEDED.md  OPTIMIZATION_SUMMARY.md  README.md  RESTRUCTURING_SUMMARY.md  ROADMAP.md  deploy.sh  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  manage.sh  package-lock.json  package.json  run.sh  scaffold-cli.py
backend/: .dockerignore  .env.example  DEPENDENCY_FIX_GUIDE.md  Dockerfile  ENHANCED_LOGGING_SUMMARY.md  README.md  add_progress_endpoint.py  alembic.ini  auth_status_report.py  check_dependencies.py  check_users.py  create_admin_user.py  create_config_tables.py  debug_user_auth.py  demo_enhanced_logging.py  demo_workflow_data.py  export-api-docs.sh  fix_dependencies.py  fix_export_jobs_table.py  integrate_enhanced_logging.py  main.py  manage.py  pylint.ini  pyproject.toml  pytest.ini  quick_fix.sh  requirements-dev.txt  requirements.txt  run_migration.py  setup_venv_and_deps.py  test_api.sh  test_csp.py  test_cycle.sh  test_dynamic_import_export.py  test_enhanced_base_model.py  test_middleware_fix.py  test_phase3.py  test_real_data_export.py  test_rls_implementation.py  test_runner.py  (+6 more)
backend/alembic/: env.py
backend/alembic/versions/: 1758713815_add_blog_posts.py  1758713815_add_products.py  36a511a2fa73_add_text_templates_table.py  4f8bf3d9988b_add_notifications_table.py  59eea8df6687_add_inbox_items_table.py  6513586ffd9b_add_activity_logs_and_messages_tables.py  70ed9e9a5e7d_add_messaging_configs.py  7cd8c031e498_add_message_reactions_table.py  7eafdbc719ae_initial_schema.py  816ba7ebc8fd_add_attachments_table.py  8b1bd3ab097a_add_labels_tables.py  8c7109d77e0a_add_enterprisemodel_columns_to_user.py  a1b2c3d4e5f6_add_conversations_tables.py  add_notifications_table.py  add_performance_indexes.py  bfa15e737e5e_add_mentions_table.py  c22cb0ae5543_add_marketplace_phase2_subscription_.py  ca184808e69a_add_bookmarks_and_message_archive.py  e16d187435a7_add_rbac_models_contenttype_menuitem_.py  ea2e2c127424_add_installed_modules_table.py  f2a3b4c5d6e7_add_module_migration_tables.py  g3h4i5j6k7l8_add_phase1_module_features.py  h4i5j6k7l8m9_add_phase2_module_features.py  i5j6k7l8m9n0_add_phase3_phase4_features.py  j6k7l8m9n0o1_add_marketplace_tables.py  k7l8m9n0o1p2_add_marketplace_phase3_tables.py  l8m9n0o1p2q3_add_security_tables.py  m9n0o1p2q3r4_add_missing_rls_audit_columns.py  partition_activity_logs.py
backend/app/: __init__.py
backend/app/api/: authors.py  base_crud.py  base_crud_router.py  blog_posts.py  categorys.py  main.py  products.py  saless.py  versioning.py
backend/app/application/: __init__.py
backend/app/auth/: deps.py  optional_deps.py  permissions.py  verification.py
backend/app/core/: __init__.py  async_optimization.py  background_tasks.py  cache.py  cache_optimization.py  config.py  context.py  csp_allowed_urls.json  csp_config.py  database_optimization.py  documentation.py  enhanced_logging_config.py  error_handlers.py  exceptions.py  exports.py  logging.py  oauth.py  performance_monitoring.py  rate_limiting.py  redis_config.py  scheduler.py  security.py  swagger_config.py  websocket.py
backend/app/db/: __init__.py  base.py  init_db.py  replication.py  seed_components.py  seed_roles_permissions.py  session.py
backend/app/domain/: __init__.py
backend/app/examples/: cache_usage_examples.py
backend/app/graphql/: auth.py  context.py  dataloaders.py  middleware.py  mock_schema.py  mutations.py  resolvers.py  schema.py  service_integration.py  test_integration.py  types.py
backend/app/middleware/: __init__.py  acl_middleware.py  auth_middleware.py  cache_middleware.py  context.py  cors_middleware.py  enhanced_cache_middleware.py  enhanced_logging_middleware.py  error_handling.py  error_handling_middleware.py  logging_middleware.py  optimization_middleware.py  rate_limiting.py  rate_limiting_middleware.py  request_logging.py  rls_middleware.py  security.py  security_middleware.py  validation_middleware.py  zero_trust_middleware.py
backend/app/models/: __init__.py  activity_log.py  asset.py  attachment.py  audit.py  audit_trail.py  author.py  base.py  blog_post.py  bookmark.py  category.py  company.py  component.py  conversation.py  data_import_export.py  enums.py  group.py  inbox.py  label.py  (+27 more)
backend/data/: demo.json  seed.json
backend/demo_data/: sample_customers.json  sample_orders.csv  sample_products.csv  sample_users.csv
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md  CACHING_STRATEGY_SUMMARY.md  CRM.md  CSP_MANAGEMENT.md  DATABASE_OPTIMIZATION_SUMMARY.md  DEPENDENCY_FIX_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCED_LOGGING_SUMMARY.md  GRAPHQL_IMPLEMENTATION.md  GRAPHQL_INTEGRATION_STATUS.md  HORIZONTAL_SCALING_SUMMARY.md  INBOX.md  INSTALLATION.md  MARKETPLACE.md  MIGRATION.md  MODULE_SECURITY.md  MODULE_SYSTEM.md  NOTIFICATIONS.md  README.md  RLS_SYSTEM.md  SCHEMA_MANAGEMENT.md  SECURITY.md  SYNTAX_FIX_SUMMARY.md  TESTING.md  UV_WORKFLOW.md  backend-scaffolding-usage.md  enterprise_marketplace_plan.md
backend/exports/: README.md  fastnext-postman-collection.json  openapi.json  openapi.yaml
backend/migrations/: env.py
backend/modules/: __init__.py
backend/requirements/: base.txt  dev.txt  development.txt  prod.txt  test.txt
backend/scaffolding/: backend_generator.py  docs_generator.py  graphql_generator.py  indexing_optimizer.py  permissions_generator.py  test_generator.py  typescript_generator.py
backend/scripts/: check_debug_code.py  export_openapi.py  fix_print_statements.py  manage_csp.py  simple_export.py
backend/tests/: conftest.py  performance_report.json  test_acl_api.py  test_acl_service_unit.py  test_author.py  test_blog_post.py  test_category.py  test_crud_operations.py  test_distributed_performance.py  test_product.py  test_sales.py  test_upgrade_verification.py  test_workflow_api.py  test_workflow_engine.py  test_workflow_models.py  utils.py
(+1839 files in other folders)
